--- a/doc/src/period98.tex
+++ b/doc/src/period98.tex
@@ -2,7 +2,7 @@
 
 % general variables
 \newcommand{\periodnamens}[0]{Period98}
-\newcommand{\version}[0]{1.0.1}
+\newcommand{\version}[0]{1.0.2}
 \newcommand{\wxver}[0]{1.66}
 
 % URL-directions
@@ -38,9 +38,11 @@
 
 \newcommand{\toedit}[0]{{\large XXXX TO EDIT XXXX}}
 
-\newcommand{\linuxitem}[0]{\item \urlref{i386 - Linux}{\periodunixversion-linux}}
-\newcommand{\osfitem}[0]{\item \urlref{Alpha - OSF1}{\periodunixversion-osf}}
-\newcommand{\periodbinaries}[0]{\linuxitem \osfitem}
+\newcommand{\ftplinux}[0]{\item \urlref{i386 - Linux}{\periodunixversion-i386-linux-2.0}}
+\newcommand{\ftposf}[0]{\item \urlref{Alpha - OSF1}{\periodunixversion-alpha-osf-4.0}}
+\newcommand{\ftpsgi}[0]{\item \urlref{SGI - IRIX}{\periodunixversion-mips-IRIX-6.3}}
+
+\newcommand{\periodbinaries}[0]{\ftplinux \ftposf \ftpsgi}
 
 % defines
 \newcommand{\menu}[1]{{\it menu ``#1''}}
@@ -57,7 +59,7 @@
         V\version\\
         A period search-program for Windows and Unix}
 \author{Martin Sperl}
-\date{August 1997}
+\date{February 1998}
 
 % define dafault paragraph spacing
 \normskip
