--- a/doc/src/d_period.tex
+++ b/doc/src/d_period.tex
@@ -421,6 +421,12 @@ For the format of the output file please see
 \helpref{Import frequencies}{period.import}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Clean all frequencies}%
+\label{period.cleanfrequencies}
+To clean the tabel of frequencies, select in the \menu{Fit} by selecting the 
+\menuentry{Clean all frequencies}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Phase plot}%
 \label{period.phase}
 As a last tool, the {\bf Fit module} offers the possibility of phase plotting
