--- a/doc/src/faq.tex
+++ b/doc/src/faq.tex
@@ -1,10 +1,22 @@
-\section{How can I export residuals?}
+\section{General FAQ's}
+
+\subsection{How can I export residuals?}
 Please read on the subject of 
 \helpref{exporting the Timestring}{timestring.export}. 
 There you can select what parts of the timestring you can export.
-And this naturally includes the residuals as well.
+(See \helpref{Export Time string}{timestring.export}).
 
-\section{How can I get other files listed in the file selecter with Unix?}
+\section{FAQ regarding then Windows95 version of \periodname}
+
+\subsection{How can I get Period98 to start in a different Directory than the installation directory}
+
+Edit the properties of the shortcut to Period98 and change there the
+``Start in:'' path. This path should point to your prefered directory.
+
+
+\section{FAQ regarding Unix}
+
+\subsection{How can I get other files listed in the file selector with Unix?}
 Basically \period assumes a certain extension of file belongs to a certain
 data type. This is reflected in the file selector. 
 
