--- a/doc/src/install.tex
+++ b/doc/src/install.tex
@@ -88,7 +88,7 @@ Please get all of the following files:
         some features needed to compile or that your shell does not define 
         the system variable OSTYPE. 
 \item Compile the relevant components with the command:\\
-        {\tt make all SRC="src utils/wxTab utils/wxHelp user/\periodnamens"}\\
+        {\tt make all SRC='' src utils/wxTab utils/wxHelp user/\periodnamens''}\\
         in the case of compile or link problems that mention something
         about xpm please retry to configure your system with the
         additional switch:
