--- a/doc/src/bugs.tex
+++ b/doc/src/bugs.tex
@@ -1,9 +1,9 @@
-Here are some of the problems yet to be resolved:
-\myitemize{
-\item Improve Special and composite with one fixed frequency possible?\\
-        If so, then equally spacing is possible in FAQ
-\item Data tables may not show the last line and redraw problems...
-}
+%Here are some of the problems yet to be resolved:
+%\myitemize{
+%\item Improve Special and composite with one fixed frequency possible?\\
+%        If so, then equally spacing is possible in FAQ
+%\item Data tables may not show the last line and redraw problems...
+%}
 
 If some problems with \period are found, then please do not
 hesitate to contact the 
