--- a/doc/src/d_log.tex
+++ b/doc/src/d_log.tex
@@ -20,9 +20,9 @@ in the \menu{Log}.
 
 \note{Editing/erasing the log is possible in the usual manner.}
 
-\note{On Windows95 there is a limitation of the size of text in a
+\note{With Windows95 there is a limitation of the size of text in a
 text dialog. \period will automatically truncate at the start as it 
-approaches this limit and write a short header in this case...}
+approaches this limit and write a short header in this case.}
 
 %%% Local Variables: 
 %%% mode: latex
