--- a/doc/src/using.tex
+++ b/doc/src/using.tex
@@ -33,12 +33,12 @@ An example for a data point is:
 \row{{\bf time}&{116.7018519}}
 \row{{\bf amplitude}&{11.231}}
 \row{{\bf date}&{1996-02-03}}
-\row{{\bf observatory}&{SAAO}}
+\row{{\bf observatory}&{KitPeak}}
 \ruledrow{{\bf observer}&{Smith}}
 \end{tabular}
 
 and the format of the data would be:\\
-{\tt 116.7018519     11.231  1996-02-03      Keck    Smith}
+{\tt 116.7018519     11.231  1996-02-03      KitPeak    Smith}
 
 Thus selecting a certain subset of the time string can be done 
 by selecting the appropriate labels in each of these attributes. 
