--- a/doc/src/d_basic.tex
+++ b/doc/src/d_basic.tex
@@ -8,7 +8,7 @@ $$\image{0cm;0cm}{GMainTop.eps}$$%
 \caption{The top part of the main window of \period}%
 \label{mainframe.top}
 \end{figure}
-When starting \period is the main window will be shown.
+When starting \period the main window will be shown.
 In the \helpfigref{top}{mainframe.top} there is a menu bar and 
 below 4 folders labeled as:
 \myitemize{
@@ -100,7 +100,7 @@ There are a some menu entries:
 \label{basic.error}
 
 In case of a program error \period will try to recover from the
-worst, inform the user that an fatal error has occurred and ask for a
+worst, inform the user that a fatal error has occurred and ask for a
 filename to store the current project.
 
 \note{A new filename is preferred, as the internal data structure may 
