--- a/doc/src/d_fourier.tex
+++ b/doc/src/d_fourier.tex
@@ -39,7 +39,7 @@ range is sampled can be changed. {\bf High, medium and low} are good
 estimates (High uses most time to calculate).
 With {\bf Custom} a user defined value can be chosen 
 in the text item next to it.
-For all the other 3 possibilities the text item can not be edited and
+For the other 3 possibilities the text item can not be edited and
 will contain the value that would be used in this case.
 
 Next the {\bf highest peak} line gives the highest peak that was 
