--- a/doc/src/d_period.tex
+++ b/doc/src/d_period.tex
@@ -21,8 +21,8 @@ Gives the total number of active frequencies.
 These are the frequencies for which in the frequency table,
 the check box is selected near the frequency number.
 
-{\bf Use weights}
-means: use the time string in a weighted form for the
+{\bf Use weights}:
+use the time string in a weighted form for the
 least square fit calculation, if it has been selected.
 
 {\bf Zero point}:
@@ -97,7 +97,7 @@ the amplitudes and phases of all active frequencies.
 takes the current settings and improves 
 not only amplitudes and phases, but also the frequencies.
 
-\item \button{Improve Special}
+\item \button{Improve special}
 gives full power to the user for calculations, as it allows to 
 decide for every active frequency, amplitude or phase whether it 
 should be a fixed or free parameter.
@@ -383,6 +383,8 @@ $$\image{0cm;0cm}{PEpochs.eps}$$%
 \end{figure}
 
 The \button{Calculate} will update these results.
+The \button{Print} will print the results and
+the \button{Save} will save the results.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Import frequencies}%
