--- a/doc/src/d_timestr.tex
+++ b/doc/src/d_timestr.tex
@@ -23,14 +23,14 @@ gives the number of points that are selected.
 gives the total number of points in the time string.
 
 {\bf Start time}:
-gives the start time of the selected timestring.
+gives the start time of the selected time string.
 
 {\bf Time string is in magnitudes}:
-informs \periodname that the timestring is in magnitudes 
+informs \periodname that the time string is in magnitudes 
 (i.e. the scale is inverted for plots, etc\ldots)
 
 {\bf End time}:
-gives the end time of the selected timestring.
+gives the end time of the selected time string.
 
 There are {\bf 4 list boxes with buttons on top} side by side,
 each of which represents one attribute of the time string.
@@ -193,7 +193,7 @@ $$\image{0cm;0cm}{TSubdivide.eps}$$%
 \label{timestring.subdivide.dialog}
 \end{figure}
 
-\note{To reconvert the subdivided timestring, removing all the generated
+\note{To reconvert the subdivided time string, removing all the generated
 labels and replacing them with a new common one, the 
 \helpref{Combine substrings}{timestring.rename} option should be used.
 A new label should be entered and as attribute the attribute
@@ -378,6 +378,7 @@ $$\image{0cm;0cm}{GGraphViewport.eps}$$%
 \end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
 \subsection{Delete default label}%
 \label{timestring.default}
 To change the default values of attribute and label 
@@ -386,15 +387,17 @@ the \menu{time string} of the main window has to be selected.
 
 This opens up the 
 \helpfigref{delete default label dialog}{timestring.default.dialog}.
+and is only relevant in the 
+\helpref{time string table}{timestring.table} and 
+\helpref{time string graph}{timestring.graph}.
+
+
 \begin{figure}[h]
 $$\image{0cm;0cm}{TDefault.eps}$$%
 \caption{The ``delete default label'' dialog}%
 \label{timestring.default.dialog}
 \end{figure}
 
-This is only relevant in the time string 
-\helpref{table}{timestring.table} and 
-\helpref{graph}{timestring.graph}.
 
 %%% Local Variables: 
 %%% mode: latex
