--- a/doc/src/faq.tex
+++ b/doc/src/faq.tex
@@ -8,7 +8,7 @@ There you can select what parts of the timestring you can export.
 
 \section{FAQ regarding then Windows95 version of \periodname}
 
-\subsection{How can I get Period98 to start in a different Directory than the installation directory}
+\subsection{How can I get Period98 to start in a different directory than the installation directory}
 
 Edit the properties of the shortcut to Period98 and change there the
 ``Start in:'' path. This path should point to your prefered directory.
