--- a/doc/src/install.tex
+++ b/doc/src/install.tex
@@ -12,7 +12,7 @@ and finally installs \period on the start menu.
 \section{Unix - Install precompiled}%
 \label{Install_Unix_precompiled}
 
-The following UNIX executables are currently (or will shortly be) available:
+The following UNIX executables are currently available:
 \myitemize{\periodbinaries}
 
 To review the latest list of compilation of 
@@ -23,7 +23,7 @@ To install, simply type the command:
 {\tt sh \periodfull-<OSTYPE>}
 as this is a shell script.
 You will be asked a few questions about where to install the relevant files.
-First where all the files needed for \period should be installed, and then
+First, where all the files needed for \period should be installed, and then
 where the binary itself should be installed.
 
 When the program has finished, \period is ready to use and can be 
@@ -82,7 +82,7 @@ Please get all of the following files:
         {\tt ./configure}\\
         If this does complain about something, then please
         try to fix the situation according to the messages
-        that you receive.\\
+        which you receive.\\
         The most probable events may be that the version
         of {\bf make} installed on your machine does not support
         some features needed to compile or that your shell does not define 
