--- a/doc/src/period98.tex
+++ b/doc/src/period98.tex
@@ -1,4 +1,4 @@
-\documentstyle[a4,twoside,makeidx,verbatim,texhelp,fancyhea,mysober,mytitle]{book}
+\documentstyle[a4,twoside,makeidx,verbatim,texhelp,fancyhea,mysober,mytitle,astron]{book}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % define stuff
@@ -10,7 +10,7 @@
         V\version\\
         A period search-program for Windows and Unix}
 \author{Martin Sperl}
-\date{February 1998}
+\date{March 1998}
 
 % define dafault paragraph spacing
 \normskip
@@ -45,6 +45,15 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % appendix
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\appendix
 \input p98appe
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% appendix
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\latexonly{\input{ref}}
+%\latexonly{\myhead{{\it REFERENCES}}{REFERENCES}{}}
+\latexonly{\thispagestyle{empty}}
 
 \end{document}
