--- a/doc/src/using.tex
+++ b/doc/src/using.tex
@@ -33,12 +33,12 @@ An example for a data point is:
 \row{{\bf time}&{116.7018519}}
 \row{{\bf amplitude}&{11.231}}
 \row{{\bf date}&{1996-02-03}}
-\row{{\bf observatory}&{KitPeak}}
+\row{{\bf observatory}&{KittPeak}}
 \ruledrow{{\bf observer}&{Smith}}
 \end{tabular}
 
 and the format of the data would be:\\
-{\tt 116.7018519     11.231  1996-02-03      KitPeak    Smith}
+{\tt 116.7018519     11.231  1996-02-03      KittPeak    Smith}
 
 Thus selecting a certain subset of the time string can be done 
 by selecting the appropriate labels in each of these attributes. 
@@ -104,8 +104,7 @@ but basically there are 3 modes of calculation:
 }
 
 The last of the modules of \period gives access to {\bf Fourier} techniques.
-In this case there is nothing much out of the ordinary, but it has 
-some interconnections with the {\bf fit} module. 
+This has some interconnections with the {\bf fit} module. 
 
 \note{it performs full featured Fourier transformation and does not use
 the faster ``Fast Fourier Transform ''(FFT) algorithm, as data
@@ -171,7 +170,7 @@ let us try to find out what frequencies are in the data.
 \subsection{Fourier analysis}
 First we have to make a Fourier analysis.
 Activate the \helpref{fourier folder}{fourier.folder} by clicking
-with the Mouse on {\bf Fourier} - but do {\it not} select the menu.
+with the mouse on {\bf Fourier} - but do {\it not} select the menu.
 
 The new dialog offers a lot of possibilities, but as the defaults
 for \period are well chosen in this case just pressing on the
